tests/errors/importerror.py
"""
site: importerror
routes:
exports:
"""

import doesnotexist
doesnotexist
